--- a/src/app/view-model/painting/painting.component.html
+++ b/src/app/view-model/painting/painting.component.html
@@ -1,10 +1,17 @@
 <style>
-  .painting {
+  :host {
+    display: block;
+    margin:10px;
     width:400px;
     height:400px;
     padding:10px;
-    background-color: rgba(156, 151, 151, 0.6);
-    background-size: contain;
+    border-radius: 10px;
+    background-color: rgb(42, 228, 228);
+  }
+  .painting {
+    height:100%;
+    width:100%;
+    background-size: cover;
   }
 </style>
 <div class="painting" [style.background]="url"></div>
