--- a/src/app/view-model/vm-home/vm-home.component.html
+++ b/src/app/view-model/vm-home/vm-home.component.html
@@ -1,23 +1,58 @@
+<div class="hold">
+  <section>
+    <h1>Need some inspiration?</h1>
+
+  </section>
+  <section>
+    <div class="row">
+      <small *ngIf="!(baClicks$ | async)">Art is updated in {{countDown$|async}} seconds.</small>
+      <small *ngIf="baClicks$ | async">Art updates are paused.</small>
+      <small *ngIf="!(bqClicks$ | async)">Quotes updates every {{speed$|async}} seconds</small>
+      <small *ngIf="bqClicks$ | async">Quotes are paused</small>
+    </div>
+
+    <div class="row">
+      <painting [art]='pausedArt$ | async'></painting>
+      <quote [quote]="pauseQuote$ | async"></quote>
+    </div>
+
+    <div class="row">
+      <play-button #ba [isPaused]="baClicks$ | async"></play-button>
+      <play-button #bq [isPaused]="bqClicks$ | async"></play-button>
+    </div>
+
+    <div class="row">
+      <span></span>
+      <input #speed type="range" min="0.5" max=30 step=".5" [value]='speed$ | async' [style.width]="'100%'">
+    </div>
+  </section>
+</div>
+
+
 <style>
   .hold {
     position: absolute;
     top: 0;
     left: 0;
-    height:100vh;
+    height: 100vh;
     width: 100vw;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
+    background-color: rgb(226, 243, 238);
     padding: 20px;
     display: grid;
+    justify-items: center;
+    align-items: center;
     grid-template-rows: 40px 1fr;
   }
+
+  .row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 20px;
+    ;
+  }
 </style>
-
-<div class="hold">
-  <section>
-    <h1>View Model sample</h1>
-  </section>
-  <section>
-
-    <painting [art]='art$ | async'></painting>
-  </section>
-</div>
