--- a/src/app/view-model/vm-home/vm-home.component.html
+++ b/src/app/view-model/vm-home/vm-home.component.html
@@ -1,3 +1,4 @@
+<!-- main part -->
 <div class="hold">
   <section>
     <h1>Need some inspiration?</h1>
@@ -5,10 +6,10 @@
   </section>
   <section>
     <div class="row">
-      <small *ngIf="!(baClicks$ | async)">Art is updated in {{countDown$|async}} seconds.</small>
-      <small *ngIf="baClicks$ | async">Art updates are paused.</small>
-      <small *ngIf="!(bqClicks$ | async)">Quotes updates every {{speed$|async}} seconds</small>
-      <small *ngIf="bqClicks$ | async">Quotes are paused</small>
+      <small *ngIf="!(baClicks$ | async)"> Art is updated in {{countDown$|async}} seconds.</small>
+      <small *ngIf="baClicks$ | async">    Art updates are paused.</small>
+      <small *ngIf="!(bqClicks$ | async)"> Quotes updates every {{speed$|async}} seconds</small>
+      <small *ngIf="bqClicks$ | async">    Quotes are paused</small>
     </div>
 
     <div class="row">
@@ -28,7 +29,7 @@
   </section>
 </div>
 
-
+<!-- I prefer inline styling of yet another file -->
 <style>
   .hold {
     position: absolute;
