--- a/src/app/view-model/vm-home-vm/vm-home-vm.component.html
+++ b/src/app/view-model/vm-home-vm/vm-home-vm.component.html
@@ -27,6 +27,11 @@
       <input #speed type="range" min="0.5" max=30 step=".5" [value]='vm.speed' [style.width]="'100%'">
     </div>
   </section>
+  <span style="z-index:50;font-size:0.9em;">
+    <img src="http://api.paperquotes.com/static/images/paperquotes.png" height="20" width="20" alt="paperquotes.com">
+    <a href="http://paperquotes.com" title="Powered by quotes from paperquotes.com" style="color: #9fcc25; margin-left: 4px; vertical-align: middle;">paperquotes.com
+    </a>
+</span>
 </div>
 
 <!-- loading modal -->
