--- a/src/app/view-model/quote/quote.component.html
+++ b/src/app/view-model/quote/quote.component.html
@@ -7,15 +7,30 @@
     padding: 10px;
     background-color: rgba(171, 201, 53, 0.76);
     border-radius: 10px;
+    overflow: hidden;
   }
 
   .who {
-    font-style: italic
+    font-style: italic;
+    color: white
   }
 
   .text {
     font-weight: bolder;
+    color:whitesmoke
+  }
+
+  .painting {
+    height: 100%;
+    width: 100%;
+    padding: 15px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 </style>
-<p class="text">{{quote?.quote}}</p>
-<p class="who">{{quote?.author}}</p>
+<!-- Use a bit of css to set the backgroundimage from the quote -->
+<div class="painting" [style.background-image]="'url(' + quote?.imgSrc + ')'">
+  <p class="text">{{ quote?.quote }}</p>
+  <p class="who">{{ quote?.author }}</p>
+</div>
